@@ -78,6 +78,13 @@ module Netzke
         # We don't want here any values from the superclass (which is the consequence of using inheritable attributes).
         res == self.superclass.read_inheritable_attribute(attr_name) ? {} : res
       end
+
+      # Same as +read_inheritable_attribute+ returning a hash, but returns empty hash when it's equal to superclass's
+      def read_clean_inheritable_array(attr_name)
+        res = read_inheritable_attribute(attr_name) || []
+        # We don't want here any values from the superclass (which is the consequence of using inheritable attributes).
+        res == self.superclass.read_inheritable_attribute(attr_name) ? [] : res
+      end
     end
 
     # Instantiates a component instance. A parent can optionally be provided.
