@@ -1,0 +1,6 @@
+// Some comments should be ok here
+{
+  onActionTwo: function() {
+    this.setTitle("Action " + "Two triggered!");
+  }
+}
