@@ -1,0 +1,5 @@
+{
+  onActionOne: function() {
+    this.setTitle("Action " + "One triggered!");
+  }
+}
