@@ -1,0 +1,5 @@
+{
+  onActionThree: function() {
+    this.setTitle("Action " + "Three triggered!");
+  }
+}
